# maikroskope

./: README.md  app.py  pyproject.toml
.arkitekt_next/: .dockerignore  manifest.yaml
