[tool.poetry]
name = "maikroskope"
version = "0.1.0"
description = ""
authors = ["Johannes Roos <jhnnsrs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arkitekt-next = {version = ">=0.7.56", extras = ["all"]}
akuire = "^0.1.2"
nanoimagingpack = "^2.1.3.dev1"
opencv-python-headless = "^4.10.0.84"
livekit = "^0.12.1"
setuptools = "^73.0.0"
lovekit = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
